# kash_os

./: Cargo.toml  x86_64-kash_os.json
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
